# vm-attest-proto

./: Cargo.toml  README.md  build.rs  debian-vm.sh
.github/workflows/: license-check.yaml  test.yaml
src/: lib.rs  mock.rs  socket.rs  vsock.rs
test-data/: README.md  vm-instance-cfg.json
