[package]
name = "vm-attest-trait"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
attest-data.git = "https://github.com/oxidecomputer/dice-util"
const-oid = { version = "0.9.5", features = ["db"] }
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", features = ["mock"] }
ed25519-dalek = { version = "2.1", default-features = false }
getrandom = "0.3.4"
hubpack = "0.1.2"
rats-corim.git = "https://github.com/oxidecomputer/rats-corim"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["std", "serde"] }
x509-cert = "0.2.5"

[build-dependencies]
anyhow.version = "1.0.100"
