[package]
name = "vm-attest-trait"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.100"
attest-data.git = "https://github.com/oxidecomputer/dice-util"
cfg-if = "1.0.4"
clap = { version = "4.5.53", features = ["derive"] }
const-oid = { version = "0.9.5", features = ["db"] }
ctrlc = "3.5.1"
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", features = ["ipcc", "mock"] }
ed25519-dalek = { version = "2.1", default-features = false }
getrandom = { version = "0.3.4", features = ["std"] }
hubpack = "0.1.2"
rats-corim.git = "https://github.com/oxidecomputer/rats-corim"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["std", "serde"] }
x509-cert = "0.2.5"

[build-dependencies]
anyhow.version = "1.0.100"
