[package]
name = "vm-attest-trait"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[features]
default = ["vsock"]
vsock = ["dep:vsock"]

[dependencies]
anyhow = "1.0.100"
attest-data.git = "https://github.com/oxidecomputer/dice-util"
cfg-if = "1.0.4"
clap = { version = "4.5.53", features = ["derive"] }
clap-verbosity = "2.1.0"
const-oid = { version = "0.9.5", features = ["db"] }
ctrlc = "3.5.1"
dice-verifier = { git = "https://github.com/oxidecomputer/dice-util", features = ["ipcc", "mock"] }
ed25519-dalek = { version = "2.1", default-features = false }
env_logger = "0.11.8"
getrandom = { version = "0.3.4", features = ["std"] }
hubpack = "0.1.2"
libc = "0.2.180"
log = "0.4.29"
rats-corim.git = "https://github.com/oxidecomputer/rats-corim"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["std", "serde"] }
vsock = { version = "0.5.2", optional = true }
x509-cert = "0.2.5"

[build-dependencies]
anyhow.version = "1.0.100"

[[bin]]
name = "vsock-client"
path = "src/bin/vsock-client.rs"
required-features = ["vsock"]

[[bin]]
name = "vsock-server"
path = "src/bin/vsock-server.rs"
required-features = ["vsock"]

[[bin]]
name = "vm-instance"
path = "src/bin/vm-instance.rs"
required-features = ["vsock"]

[[bin]]
name = "vm-instance-rot"
path = "src/bin/vm-instance-rot.rs"
required-features = ["vsock"]
